# EAAC

./: .gitignore  LICENSE  README.md  env_example
EAAC_wrapper/: EAAC.json  EAAC.py  README.md  setup.py
EAAC_wrapper/eaac/: EAAC.py  __init__.py  agent_parser.py  eaac_kg.py  eaac_tools.py
backend/KG/analysis/preprocess/: content_parser.py  generate_triplet_llm.py  generate_triplet_spacy.py  generate_triplet_stanza.py  hf_ner.py
backend/KG/analysis/scratch/: triplets.csv  triplets.rdf
backend/KG/db/neo4j/docker/: docker-compose.yml
backend/KG/db/neo4j/ingestion/: neo4j_service.py  queries.py
backend/KG/listener/: history.csv  ipfs_util.py  listener.py  log_decoder.py  log_filters.py  report.json
backend/api_server/: go.mod  go.sum  main.go
backend/smartcontracts/: hardhat.config.js  package-lock.json  package.json
backend/smartcontracts/.openzeppelin/: sepolia.json
backend/smartcontracts/contracts/: EAAC.sol
backend/smartcontracts/scripts/: deploy.js
dev_misc/helm/: values_template.yml
dev_misc/terrform/: template.hcl
examples/agents/: pyproject.toml
examples/agents/agent_frameworks/: autogen_agent.py  crewai_agent.py  langchain_agent.py  new-blog-post.md  report.json
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
