[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["arahangua <arahangua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.1"
numpy = "^1.26.4"
langchain = "^0.1.14"
openai = "^1.16.0"
pyautogen = "^0.2.21"
crewai = {extras = ["tools"], version = "^0.28.8"}
duckduckgo-search = "^5.3.0"
tavily-python = "^0.3.3"
eth-account = "^0.12.2"
ipfs-toolkit = "^0.5.20"
langchain-groq = "^0.1.3"
tiktoken = "0.5.2"
langchain-text-splitters = "^0.0.1"
spacy = "^3.7.4"
stanza = "^1.8.2"
rdflib = "^7.0.0"
neo4j = "^5.20.0"
py2neo = "^2021.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
